# Trayracer

./: .gitignore  CMakeLists.txt  build.sh
data/shaders/: quad.frag.glsl  quad.vert.glsl  raytracer.comp.glsl
src/: CMakeLists.txt  camera.cpp  camera.h  display.cpp  display.h  game.cpp  game.h  main.cpp  primitives.h  quad.cpp  quad.h  quadshader.cpp  quadshader.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  shaderloading.cpp  shaderloading.h  singleton.h  texture.cpp  texture.h
